# kubernetesAgent

./: .gitignore  DIAGNOSTIC_MODE.md  LICENSE  README.md  demo_commands.md
agent/: .env.example  README.md  agent.py  requirements.txt
mcp_server/: .env.example  README.md  pyproject.toml  pytest.ini  start_server.ps1
mcp_server/src/k8s_mcp_server/: __main__.py  prompts.py  server.py
mcp_server/tests/: __init__.py  test_integration.py  test_prompts.py  test_server_health.py  test_validation.py
